--- a/src/_layouts/master.html
+++ b/src/_layouts/master.html
@@ -69,13 +69,11 @@
     <script src="/_bower_components/malihu-custom-scrollbar-plugin/jquery.mCustomScrollbar.js"></script>
     <script src="/_bower_components/jquery-mousewheel/jquery.mousewheel.js"></script>
     <script src="/_bower_components/jquery-placeholder/jquery.placeholder.js"></script>
-    <script src="/_bower_components/jQuery.mmenu/src/js/jquery.mmenu.min.all.js"></script>
-    <script src="/_bower_components/bxSlider/jquery.bxslider.min.js"></script>
+    <script src="/_bower_components/jquery.transit/jquery.transit.js"></script>
     <script src="/_bower_components/fastclick/lib/fastclick.js"></script>
     <script src="/_bower_components/foundation/js/foundation/foundation.js"></script>
     <script src="/_bower_components/magnific-popup/dist/jquery.magnific-popup.min.js"></script>
     <script src="/_bower_components/nprogress/nprogress.js"></script>
-    <script src="/_bower_components/slick.js/slick/slick.js"></script>
     <script src="/scripts/main.js"></script>
     <!-- endbuild -->
 
