--- a/src/_scss/app/_variables.scss
+++ b/src/_scss/app/_variables.scss
@@ -8,9 +8,10 @@
 // Global Variables
 //-----------------------------------------------------------------
 
-$logo-width-small: rem-calc(420);
+$logo-width-small: rem-calc(300);
 $symbol-width-small: rem-calc(435);
 $symbol-width-medium: $symbol-width-small*2;
+$symbol-gap-width: 60;
 
 //=========================================
 //
