--- a/src/_scss/app/_modules.scss
+++ b/src/_scss/app/_modules.scss
@@ -26,13 +26,16 @@ $symbol-gap-width: 60 !default;
 
 	> ul > li {
 		position: relative; // risky?
-		width: $symbol-width-small;
 		padding-bottom: 0;
 		margin-bottom: 0;
 
-		margin: rem-calc(0 $symbol-gap-width); // match space between symbols
+		@media #{$medium-up} {
+			width: $symbol-width-small;
+			margin: rem-calc(0 $symbol-gap-width); // match space between symbols
+		}
 
-		@media (min-height: 900px) {
+		// If iPad horizontal OR big height = larger symbols
+		@media #{$large-up} and (min-height: 900px) {
 			width: $symbol-width-medium;
 		}
 	}
@@ -143,7 +146,7 @@ $symbol-gap-width: 60 !default;
 	        background-size: cover;
 
     @media #{$devices-only} {
-		width: 100%;
+		// width: 100%; // need?
     }
 }
 
