--- a/src/_layouts/homepage.html
+++ b/src/_layouts/homepage.html
@@ -18,7 +18,7 @@ layout: master
 					<video autoplay poster="/img/content/symbol-{{forloop.index}}.jpg" id="bgvid" loop>
 						<!-- <source src="//demosthenes.info/assets/videos/polina.webm" type="video/webm"> -->
 						<!-- <source src="//demosthenes.info/assets/videos/polina.mp4" type="video/mp4"> -->
-						<!-- <source src="/img/content/polina.mp4" type="video/mp4"> -->
+						<source src="/img/content/polina.mp4" type="video/mp4">
 					</video>
 				</a>
 				{% for text in item.text %}
