--- a/src/_scss/app/_global.scss
+++ b/src/_scss/app/_global.scss
@@ -39,74 +39,34 @@ body {
 }
 
 #mCSB_1_container {
-    height: 100%;
+    height: 100%; // keep for reference
 }
 
 //-----------------------------------------------------------------
-// Page
+// Page Table
 //-----------------------------------------------------------------
 
 .lv-page {
-    // position: fixed;
-    // top: 0;
-    // left: 0;
-    // right: 0;
-    // bottom: 0;
     height: 100%;
-
-    display: table;
     // height: 100vh;
-    width: ($symbol-width-small + $symbol-gap-width/8) * 5 + $logo-width-small; // 8 is magic
+    // width: auto;//($symbol-width-small + $symbol-gap-width/8) * 5 + $logo-width-small; // 8 is magic
     margin: 0 auto;
     // overflow: hidden;
 
     @media #{$small-only} {
         width: auto;
+        padding: rem-calc(0 15); // gutter
     }
 
-    @media (min-height: 900px) {
+    @media #{$medium-up} {
+        display: table;
+        width: ($symbol-width-small + $symbol-gap-width/8) * 5 + $logo-width-small; // 8 is magic
+    }
+
+    @media #{$large-up} and (min-height: 900px) {
         width: ($symbol-width-medium + $symbol-gap-width/8) * 5 + $logo-width-small;
     }
 }
-
-//=========================================
-// Snap Grid
-//
-// Tells grid to "snap" into each breakpoint.
-// Removes issue of seeing elements super large
-// before falling into place naturally.
-//
-// Notes:
-// 5.000em = 80 (page-padding * 2)
-// Using EMs because media queries in Foundation do so
-//=========================================
-
-// .row {
-//     @media #{$medium-up}  { max-width: upper-bound($medium-range);  }
-//     @media #{$large-up}   { max-width: upper-bound($large-range);   }
-//     @media #{$xlarge-up}  { max-width: upper-bound($xlarge-range);  }
-//     @media #{$xxlarge-up} { max-width: upper-bound($xxlarge-range); }
-// }
-
-// .row {
-// 	@media #{$medium-up}  { max-width: upper-bound($medium-range)  + 5.000em; }
-// 	@media #{$large-up}   { max-width: upper-bound($large-range)   + 5.000em; }
-// 	@media #{$xlarge-up}  { max-width: upper-bound($xlarge-range)  + 5.000em; }
-// 	@media #{$xxlarge-up} { max-width: upper-bound($xxlarge-range) + 5.000em; }
-// }
-
-// Add side padding to the page above small
-// .outer-row {
-// 	@media #{$medium-up} {
-// 		padding-left: $page-padding - $column-gutter / 2;
-// 		padding-right: $page-padding - $column-gutter / 2;
-// 	}
-// }
-
-// Ensure images scale to block grid LIs */
-// ul[class*='block-grid'] li img {
-// 	width: 100%;
-// }
 
 //-----------------------------------------------------------------
 // lv-super: top-most non-visual wrapper | lv-page: visual wrapper
