--- a/src/_layouts/homepage.html
+++ b/src/_layouts/homepage.html
@@ -15,7 +15,9 @@ layout: master
 					<!-- <video></video> -->
 
 					<!-- WCAG general accessibility recommendation is that media such as background video play through only once. Loop turned on for the purposes of illustration; if removed, the end of the video will fade in the same way created by pressing the "Pause" button  -->
-					<video autoplay poster="/img/content/symbol-{{forloop.index}}.jpg" id="bgvid" loop>
+
+					<!-- poster="/img/content/symbol-{{forloop.index}}.jpg" -->
+					<video autoplay style="background-image: url(/img/content/symbol-{{forloop.index}}.jpg)" id="media-symbol-vid" loop>
 						<!-- <source src="//demosthenes.info/assets/videos/polina.webm" type="video/webm"> -->
 						<!-- <source src="//demosthenes.info/assets/videos/polina.mp4" type="video/mp4"> -->
 						<source src="/img/content/polina.mp4" type="video/mp4">
