--- a/src/_layouts/homepage.html
+++ b/src/_layouts/homepage.html
@@ -20,7 +20,7 @@ layout: master
 					<video autoplay style="background-image: url(/img/content/symbol-{{forloop.index}}.jpg)" id="media-symbol-vid" loop>
 						<!-- <source src="//demosthenes.info/assets/videos/polina.webm" type="video/webm"> -->
 						<!-- <source src="//demosthenes.info/assets/videos/polina.mp4" type="video/mp4"> -->
-						<source src="/img/content/polina.mp4" type="video/mp4">
+						<!-- <source src="/img/content/polina.mp4" type="video/mp4"> -->
 					</video>
 				</a>
 				{% for text in item.text %}
