--- a/src/_scss/foundation/app.scss
+++ b/src/_scss/foundation/app.scss
@@ -1,12 +1,12 @@
 @import "settings";
 @import "normalize";
-@import "foundation";
+// @import "foundation";
 
 // Or selectively include components
-//@import
+@import
     // "foundation/components/accordion",
     // "foundation/components/alert-boxes",
-    // "foundation/components/block-grid",
+    "foundation/components/block-grid",
     // "foundation/components/breadcrumbs",
     // "foundation/components/button-groups",
     // "foundation/components/buttons",
@@ -36,6 +36,6 @@
     // "foundation/components/thumbs",
     // "foundation/components/tooltips",
     // "foundation/components/top-bar",
-    // "foundation/components/type",
+    "foundation/components/type",
     // "foundation/components/offcanvas",
-    // "foundation/components/visibility";
+    "foundation/components/visibility";
