Improved handling of test on mobile
** Major updates to breakpoints **

--- a/src/_layouts/homepage.html
+++ b/src/_layouts/homepage.html
@@ -6,7 +6,7 @@ layout: master
 {% assign media_sections = site.data.sitemap %}
 
 <div class="media-symbol-container">
-	<ul class="small-block-grid-1 medium-block-grid-5">
+	<ul class="media-symbol-block-grid">
 		{% for item in media_sections %}
 			<li>
 				<a class="media-symbol js-media-symbol wow fadeIn" data-wow-duration="1s" data-wow-delay="{{forloop.index}}s" href="#">
