--- a/src/_scss/app/_themes.scss
+++ b/src/_scss/app/_themes.scss
@@ -19,8 +19,10 @@
 	.global-header {
 		background: green;
 	}
+	.media-symbol-container > ul > li {
+			background: black;
+	}
 }
-
 
 //=========================================
 //
