--- a/src/_scss/app/_variables.scss
+++ b/src/_scss/app/_variables.scss
@@ -1,18 +1,19 @@
 /*
     VARIABLES.CSS
 
-    - Last updated: ^^^^^^^^
+    - Last updated: 21.03.15
     - hello@liquidvisual.com
 */
 //-----------------------------------------------------------------
 // Global Variables
 //-----------------------------------------------------------------
 
-$logo-width-small: rem-calc(300);
-$symbol-width-small: rem-calc(435);
-$symbol-width-medium: $symbol-width-small*2;
+$symbol-width-medium: rem-calc(650);
+$symbol-width-large: rem-calc(870);
 $symbol-gap-width: 60;
 
 //=========================================
-//
+// Logo
 //=========================================
+
+$logo-width-small: rem-calc(300);
