--- a/src/_scss/foundation/_settings.scss
+++ b/src/_scss/foundation/_settings.scss
@@ -151,9 +151,15 @@ $body-font-family: $font-family-sans-serif;
 // d. Media Query Ranges
 // - - - - - - - - - - - - - - - - - - - - - - - - -
 
-$small-range: (0em, 40em); // 0-640
-$medium-range: (40.063em, 48em); // 641-768
-$large-range: (48.063em, 64em); // 769-1024
+// $small-range: (0em, 40em); // 0-640
+// $medium-range: (40.063em, 48em); // 641-768
+// $large-range: (48.063em, 64em); // 769-1024
+// $xlarge-range: (90.063em, 120em);
+// $xxlarge-range: (120.063em, 99999999em);
+
+$small-range: (0em, 30em); // 0-480
+$medium-range: (30.063em, 47.938em); // 481-767
+$large-range: (48em, 64em); // 769-1024
 $xlarge-range: (90.063em, 120em);
 $xxlarge-range: (120.063em, 99999999em);
 
