--- a/src/_layouts/homepage.html
+++ b/src/_layouts/homepage.html
@@ -16,8 +16,10 @@ layout: master
 
 					<!-- WCAG general accessibility recommendation is that media such as background video play through only once. Loop turned on for the purposes of illustration; if removed, the end of the video will fade in the same way created by pressing the "Pause" button  -->
 
+					{% assign fallback_bg = "/img/content/symbol-" | append: forloop.index | append: ".jpg" | prepend: site.assets %}
+
 					<!-- poster="/img/content/symbol-{{forloop.index}}.jpg" -->
-					<video autoplay style="background-image: url(/img/content/symbol-{{forloop.index}}.jpg)" id="media-symbol-vid" loop>
+					<video autoplay style="background-image: url({{ fallback_bg }})" id="media-symbol-vid" loop>
 						<!-- <source src="//demosthenes.info/assets/videos/polina.webm" type="video/webm"> -->
 						<!-- <source src="//demosthenes.info/assets/videos/polina.mp4" type="video/mp4"> -->
 						<!-- <source src="/img/content/polina.mp4" type="video/mp4"> -->
