Height scaling experiment (99% success)

--- a/src/_layouts/master.html
+++ b/src/_layouts/master.html
@@ -38,7 +38,7 @@
     <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script> -->
 </head>
 <body>
-    <div class="lv-super developerX devX">
+    <div class="lv-super developerX dev">
 
     <div class="lv-scroller">
             <div class="lv-page">
