--- a/src/_scss/app/_global.scss
+++ b/src/_scss/app/_global.scss
@@ -51,20 +51,26 @@ body {
     // width: auto;//($symbol-width-medium + $symbol-gap-width/8) * 5 + $logo-width-small; // 8 is magic
     // overflow: hidden;
 
-    @media #{$small-only} {
-        width: auto;
-        padding: rem-calc(0 15); // gutter
-    }
+    // uncomment for mobile experience
+
+    // @media #{$small-only} {
+    //     width: auto;
+    //     padding: rem-calc(0 15); // gutter
+    // }
 
     // Page extends to fill horizontal axis
-    @media #{$large-up} {
+    // @media #{$large-up} {
         display: table;
-        width: ($symbol-width-medium + $symbol-gap-width/8) * 5 + $logo-width-small; // 8 is magic
-    }
+        // width: ($symbol-width-medium + $symbol-gap-width/8) * 5 + $logo-width-small; // 8 is magic
+        // width: (#{$symbol-width} + $symbol-gap-width/8) * 5 + $logo-width-small; // 8 is magic
 
-    @media #{$large-up} and (min-height: 900px) {
-        width: ($symbol-width-large + $symbol-gap-width/8) * 5 + $logo-width-small;
-    }
+        // 80px (80/2=40px) is the vertical bleed for images
+        width: calc(#{$logo-width-small} + ((100vh - 80px) + #{$symbol-gap-width*2}) * 5);
+    // }
+
+    // @media #{$large-up} and (min-height: 900px) {
+        // width: ($symbol-width-large + $symbol-gap-width/8) * 5 + $logo-width-small;
+    // }
 }
 
 //-----------------------------------------------------------------
