Complete Overhaul - complete
Now stacks on mobile

--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -1,13 +1,14 @@
-{% comment %}
-    IGNORE THIS COMMENT: Interchange code reference for dev self:
-    <img width="200" data-interchange="[/ImageGen.ashx?width=200&image=@logo.Url, (default)], [@logo.Url, (retina)]" alt="@logo.Name">
-{% endcomment %}
-
 {% assign settings = site.data.settings %}
 
 <h1>
     <a class="logo" href="/" title="{{ settings.seo_title }}" itemprop="url">
-        <!-- <img src="/img/content" alt="{{ settings.company_title }}" itemprop="logo"> -->
-        d/b<span class="white">+(co)</span>
+        <img src="/img/content/logo.svg" alt="{{ settings.company_title }}" itemprop="logo">
     </a>
 </h1>
+
+{% comment %}
+<!-- Swipe Hint Touch - Might need later -->
+<div class="swipe-hint">
+	<img width="40" src="/img/ui/swipe-right.svg" alt="Swipe Right">
+</div>
+{% endcomment %}
