--- a/src/_scss/app/helpers/_themes.scss
+++ b/src/_scss/app/helpers/_themes.scss
@@ -11,7 +11,7 @@
 // Themes
 //-----------------------------------------------------------------
 
-.dev {
+.developer {
 	.lv-page {
 		background: grey;
 	}
