--- a/src/_layouts/homepage.html
+++ b/src/_layouts/homepage.html
@@ -2,36 +2,39 @@
 layout: master
 ---
 
-{% assign settings = site.data.settings %}
-{% assign media_sections = site.data.sitemap %}
+{% assign media_sections = site.data.media_sections %}
 
 <div class="media-symbol-container">
 	<ul class="media-symbol-block-grid">
 		{% for item in media_sections %}
 			<li>
-				<a class="media-symbol js-media-symbol wow fadeIn" data-wow-duration="1s" data-wow-delay="{{forloop.index}}s" href="#">
+				<a class="media-symbol js-media-symbol" href="#">
 					<h2 class="header">{{ item.title }}</h2>
-					<img class="img" src="/img/template/symbol-{{forloop.index}}.svg" alt="">
-					<!-- <video></video> -->
+					<div class="dark-tint-overlay"></div>
+					<img class="img" src="{{ item.symbol }}" alt="Symbol">
 
 					<!-- WCAG general accessibility recommendation is that media such as background video play through only once. Loop turned on for the purposes of illustration; if removed, the end of the video will fade in the same way created by pressing the "Pause" button  -->
 
-					{% assign fallback_bg = "/img/content/symbol-" | append: forloop.index | append: ".jpg" | prepend: site.assets %}
-
-					<!-- poster="/img/content/symbol-{{forloop.index}}.jpg" -->
-					<video autoplay style="background-image: url({{ fallback_bg }})" id="media-symbol-vid" loop>
-						<!-- <source src="//demosthenes.info/assets/videos/polina.webm" type="video/webm"> -->
-						<!-- <source src="//demosthenes.info/assets/videos/polina.mp4" type="video/mp4"> -->
-						<!-- <source src="/img/content/polina.mp4" type="video/mp4"> -->
+					<!-- style="background-image: url({{ item.image }})" -->
+					<video autoplay loop muted poster="{{ item.image }}">
+						<source src="/img/content/video/{{ item.video }}.mp4" type="video/mp4">
+						<source src="/img/content/video/{{ item.video }}.webm" type="video/webm">
+						<source src="/img/content/video/{{ item.video }}.ogv" type="video/ogg">
 					</video>
 				</a>
-				{% for text in item.text %}
-					<div class="media-symbol-text hide lv-unselectable {{ text.text_layout }}">
-						<a class="media-symbol-close-btn js-media-symbol-close-btn {{ text.close_btn_layout }}" href="#">✕</a>
-						{{ text.body | markdownify }}
-					</div>
-				{% endfor %}
 
+				<div class="media-symbol-text hide {{ item.text_position }}">
+					<div class="media-symbol-text-content">
+						<a class="media-symbol-close-btn js-media-symbol-close-btn show-for-large-up" href="#">✕</a>
+						<div class="row">
+							{% for text in item.text %}
+								<div class="medium-4 large-6 columns">
+									{{ text.body }}
+								</div>
+							{% endfor %}
+						</div>
+					</div>
+				</div>
 			</li>
 		{% endfor %}
 	</ul>
