--- a/src/_scss/app/components/_type.scss
+++ b/src/_scss/app/components/_type.scss
@@ -1,7 +1,7 @@
 /*
     TYPE.CSS
 
-    - Last updated: ^^^^^^^^
+    - Last updated: 15.08.15
     - hello@liquidvisual.com
 */
 //-----------------------------------------------------------------
@@ -11,7 +11,10 @@
 // Type
 //-----------------------------------------------------------------
 
-
+a {
+	@include transition('color .1s linear');
+	font-weight: 700;
+}
 
 //=========================================
 //
