--- a/src/_scss/foundation/_settings.scss
+++ b/src/_scss/foundation/_settings.scss
@@ -157,9 +157,9 @@ $body-font-family: $font-family-sans-serif;
 // $xlarge-range: (90.063em, 120em);
 // $xxlarge-range: (120.063em, 99999999em);
 
-$small-range: (0em, 30em); // 0-480
-$medium-range: (30.063em, 47.938em); // 481-767
-$large-range: (48em, 64em); // 769-1024
+$small-range: (0em, 30em);               // 0-480
+$medium-range: (30.063em, 47.938em);     // 481-767
+$large-range: (48em, 64em);              // 768-1024
 $xlarge-range: (90.063em, 120em);
 $xxlarge-range: (120.063em, 99999999em);
 
@@ -204,15 +204,14 @@ $xxlarge-only: "#{$screen} and (min-width:#{lower-bound($xxlarge-range)}) and (m
 
 // We use these to control header font styles
 $header-font-family: $body-font-family;
-// $header-font-weight: $font-weight-normal;
+$header-font-weight: 700; //$font-weight-normal;
 // $header-font-style: normal;
-// $header-font-color: $jet;
+$header-font-color: white; //$jet;
 // $header-line-height: 1.4;
 // $header-top-margin: .2rem;
-// $header-bottom-margin: .5rem;
+$header-bottom-margin: 0; //.5rem;
 // $header-text-rendering: optimizeLegibility;
 
-// We use these to control header font sizes
 // $h1-font-size: rem-calc(44);
 // $h2-font-size: rem-calc(37);
 // $h3-font-size: rem-calc(27);
@@ -220,11 +219,19 @@ $header-font-family: $body-font-family;
 // $h5-font-size: rem-calc(18);
 // $h6-font-size: 1rem;
 
+// We use these to control header font sizes
+$h1-font-size: rem-calc(21);
+$h2-font-size: rem-calc(21);
+$h3-font-size: rem-calc(21);
+$h4-font-size: rem-calc(21);
+$h5-font-size: rem-calc(21);
+$h6-font-size: 1rem;
+
 // We use these to control header size reduction on small screens
-// $h1-font-reduction: rem-calc(10) !default;
-// $h2-font-reduction: rem-calc(10) !default;
-// $h3-font-reduction: rem-calc(5) !default;
-// $h4-font-reduction: rem-calc(5) !default;
+$h1-font-reduction: rem-calc(0) !default;
+$h2-font-reduction: rem-calc(0) !default;
+$h3-font-reduction: rem-calc(0) !default;
+$h4-font-reduction: rem-calc(0) !default;
 // $h5-font-reduction: 0 !default;
 // $h6-font-reduction: 0 !default;
 
@@ -263,8 +270,8 @@ $paragraph-font-size: rem-calc(21); //1rem;
 // We use these to style anchors
 // $anchor-text-decoration: none;
 // $anchor-text-decoration-hover: none;
-// $anchor-font-color: $primary-color;
-// $anchor-font-color-hover: scale-color($primary-color, $lightness: -14%);
+$anchor-font-color: white; //$primary-color;
+$anchor-font-color-hover: black; //scale-color($primary-color, $lightness: -14%);
 
 // We use these to style the <hr> element
 // $hr-border-width: 1px;
