Mobile tweak + text update

--- a/src/_scss/app/modules/_media-symbol.scss
+++ b/src/_scss/app/modules/_media-symbol.scss
@@ -106,15 +106,27 @@
 	}
 }
 
-// Special case - who knows
+//=========================================
+// *** Special Case: Contact ***
+//=========================================
+
 .mid-right {
+
+	// Has to be on large
 	@media #{$large-up} {
 	    overflow: hidden;
 	}
 
+	.row .columns {
+		@media #{$medium-only} {
+			width: auto; // prevent that slim column thing on landscape mobile
+		}
+	}
+
 	.media-symbol-close-btn {
 		position: relative;
-		left: 50%;
+		left: calc(50% + 15px);
+		// left: 50%;
 		top: 0;
 	}
 }
