--- a/src/_scss/app/layout/_media-container.scss
+++ b/src/_scss/app/layout/_media-container.scss
@@ -47,27 +47,20 @@
 // Testing
 //=========================================
 
-// .media-symbol-block-grid li:not(:first-child) {
-// 	@media #{$small-only} {
-// 	    margin-top: rem-calc(5);
-// 	}
-// 	&.order-1 {
-// 		z-index: 500;
-// 	}
-// 	&.order-2 {
-// 		z-index: 4;
-// 	}
-// 	&.order-3 {
-// 		z-index: 3;
-// 	}
-// 	&.order-4 {
-// 		z-index: 2;
-// 	}
-// 	&.order-5 {
-// 		z-index: 1;
-// 	}
-// }
-
-
-
-
+.media-symbol-block-grid li {
+	&.order-1 {
+		z-index: 5;
+	}
+	&.order-2 {
+		// z-index: 4;
+	}
+	&.order-3 {
+		// z-index: 3;
+	}
+	&.order-4 {
+		// z-index: 2;
+	}
+	&.order-5 {
+		// z-index: 1;
+	}
+}
