--- a/src/_scss/app/base/_variables.scss
+++ b/src/_scss/app/base/_variables.scss
@@ -13,7 +13,7 @@ $symbol-width: calc(100vh - 80px);  // match this in global - can't do calc with
 // $symbol-width-small: rem-calc(30);
 // $symbol-width-medium: rem-calc(450); //rem-calc(650);
 // $symbol-width-large: rem-calc(870);
-$symbol-gap-width: 60px;
+$symbol-gap-width: 4px;// 60px;  // must be a set number (4), or else rendering bug in IE11 - who knows
 
 //=========================================
 // Logo
