--- a/src/_scss/app/layout/_header.scss
+++ b/src/_scss/app/layout/_header.scss
@@ -19,6 +19,7 @@
 		display: table-cell;
 	    vertical-align: middle;
 	    width: $logo-width-small;
+	    width: 200px;
 	    padding: rem-calc(0 15);
 	}
 
