--- a/src/_includes/header.html
+++ b/src/_includes/header.html
@@ -1,9 +1,9 @@
 {% assign settings = site.data.settings %}
 
 <h1>
-    <a class="logo" href="/" title="{{ settings.seo_title }}" itemprop="url">
+    <span class="logo" title="{{ settings.seo_title }}" itemprop="url">
         <img src="/img/content/logo.svg" alt="{{ settings.company_title }}" itemprop="logo">
-    </a>
+    </span>
 </h1>
 
 {% comment %}
