--- a/src/_scss/app/layout/_media-container.scss
+++ b/src/_scss/app/layout/_media-container.scss
@@ -31,6 +31,10 @@
 		@media #{$large-up} and (min-height: 900px) {
 			padding: rem-calc(0 90%);
 		}
+
+		&:first-child {
+			// margin-left: 0; // new
+		}
 	}
 
 	// Special case to coincide with code above
@@ -40,9 +44,19 @@
 		}
 	}
 
-	.media-symbol .img {
-		width: 100%; // for IE
-		box-shadow: inset 0px 0px 0px 1px $primary-color; // hack the svg rendering appearance in IE
+	> ul > li:nth-child(4) .media-symbol .img {
+		position: relative;
+		display: block;
+		border: 1px solid $primary-color;
+	}
+
+	.media-symbol {
+		border-top: 1px solid $primary-color; // IE11 specific patch
+
+		.img {
+			width: 100%; // for IE
+			box-shadow: inset 0 0px 0px 2px $primary-color; // hack the svg rendering appearance in IE9-11
+		}
 	}
 }
 
@@ -64,6 +78,7 @@
 	}
 	&.order-2 {
 		// z-index: 4;
+		// margin-top: -100px;
 	}
 	&.order-3 {
 		// z-index: 3;
